crates/biome_html_parser/tests/html_specs/ok/vue/v-for/iterable-expressions.vue
<div v-for="item in items">{{ item }}</div>
<div v-for="item in visibleItems">{{ item }}</div>
<div v-for="item in fallbackItems">{{ item }}</div>
