crates/biome_html_parser/tests/html_specs/error/vue/v-for/missing-parts.vue
<div v-for="in items">{{ item }}</div>
<div v-for="item items">{{ item }}</div>
<div v-for="item in">{{ item }}</div>
